@@ -84,6 +84,7 @@ static const struct s_opt       opts[POCC_NB_OPTS] =
   { '\0', "cloog-cloogl", 1, "CLooG: last level to scan [-1]" },
   { '\0', "use-past", 0, "\tUse the PAST back-end [off]" },
   { '\0', "pragmatizer", 0, "\tUse the CLAST pragmatizer [off]" },
+  { '\0', "ptile", 0, "\tUse PTile for parametric tiling (experimental) [off]" },
   { '\0', "vectorizer", 0, "\tPost-transform for vectorization [off]" },
   { '\0', "mark-par-loops", 0, "Detect parallel loops in generated\n\t\t\t\tcode [off]" },
   { '\0', "no-outer-par-loops", 0, "Don't preserve outer parallel loop during\n\t\t\t\tvectorization [off]" },
@@ -563,7 +564,14 @@ pocc_getopts (s_pocc_options_t* options, int argc, char** argv)
   // Pragmatizer options.
   if (opt_tab[POCC_OPT_PRAGMATIZER])
     options->pragmatizer = 1;
+   
+  
 #ifndef POCC_RELEASE_MODE
+  
+  // PTile options.
+  if (opt_tab[POCC_OPT_PTILE])
+    options->ptile = 1;
+
   // Vectorizer options.
   if (opt_tab[POCC_OPT_VECTORIZER])
     options->vectorizer = options->vectorizer_vectorize_loops = 1;
