@@ -35,7 +35,7 @@
 # include "getopts.h"
 
 # ifndef POCC_RELEASE_MODE
-#  define POCC_NB_OPTS				66
+#  define POCC_NB_OPTS				67
 # else
 #  define POCC_NB_OPTS				59
 # endif
@@ -99,22 +99,24 @@
 # define POCC_OPT_USE_PAST			50
 # define POCC_OPT_PRAGMATIZER			51
 
-# define POCC_OPT_VECTORIZER			52
-# define POCC_OPT_VECT_MARK_PAR_LOOPS    	53
-# define POCC_OPT_VECT_NO_KEEP_OUTER_PAR_LOOPS  54
-# define POCC_OPT_VECT_SINK_ALL_LOOPS		55
-# define POCC_OPT_STORCOMPACT			56
-# define POCC_OPT_AC_KEEP_OUTERPAR		57
-# define POCC_OPT_AC_KEEP_VECTORIZED		58
+# define POCC_OPT_PTILE				52
+
+# define POCC_OPT_VECTORIZER			53
+# define POCC_OPT_VECT_MARK_PAR_LOOPS    	54
+# define POCC_OPT_VECT_NO_KEEP_OUTER_PAR_LOOPS  55
+# define POCC_OPT_VECT_SINK_ALL_LOOPS		56
+# define POCC_OPT_STORCOMPACT			57
+# define POCC_OPT_AC_KEEP_OUTERPAR		58
+# define POCC_OPT_AC_KEEP_VECTORIZED		59
 
 # ifndef POCC_RELEASE_MODE
-#  define POCC_OPT_CODEGEN_TIMERCODE		59
-#  define POCC_OPT_CODEGEN_TIMER_ASM		60
-#  define POCC_OPT_CODEGEN_TIMER_PAPI		61
-#  define POCC_OPT_COMPILE      		62
-#  define POCC_OPT_COMPILE_CMD          	63
-#  define POCC_OPT_RUN_CMD_ARGS          	64
-#  define POCC_OPT_PROGRAM_TIMEOUT        	65
+#  define POCC_OPT_CODEGEN_TIMERCODE		60
+#  define POCC_OPT_CODEGEN_TIMER_ASM		61
+#  define POCC_OPT_CODEGEN_TIMER_PAPI		62
+#  define POCC_OPT_COMPILE      		63
+#  define POCC_OPT_COMPILE_CMD          	64
+#  define POCC_OPT_RUN_CMD_ARGS          	65
+#  define POCC_OPT_PROGRAM_TIMEOUT        	66
 # else
 #  define POCC_OPT_CODEGEN_TIMERCODE		52
 #  define POCC_OPT_CODEGEN_TIMER_ASM		53
